samples/_failures_safe/1761423363_95f448_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0acb7344.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_0acb7344.c:166:5: error: expected declaration or statement at end of input
  166 |     for (int i = 0; i < graph->vertex_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_0acb7344.c:166:5: error: expected declaration or statement at end of input
